fixed home image on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -59,7 +59,7 @@
     }
 
     body .home-header img{
-        height: 210px;
+        height: 175px;
     }
 }
 
